<resources>
    <string name="app_name">Vynils</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_albums">Álbumes</string>
    <string name="nav_artists">Artistas</string>
    <string name="nav_collectors">Coleccionistas</string>

    <string name="title_vinilos">Vinilos</string>
    <string name="title_albums">Álbumes</string>
    <string name="title_artists">Artistas</string>
    <string name="title_collectors">Coleccionistas</string>

    <string name="desc_back">Atrás</string>
    <string name="desc_menu">Menú</string>
    <string name="desc_home">Inicio</string>
    <string name="desc_filter">Filtrar</string>

    <string name="filter_title_albums">Filtrar Álbumes</string>
    <string name="filter_title_artists">Filtrar Artistas</string>
    <string name="filter_title_collectors">Filtrar Coleccionistas</string>
    <string name="filter_label_album_name">Nombre del álbum</string>
    <string name="filter_label_artist_name">Nombre del artista</string>
...
    <string name="btn_create_album">Crear Álbum</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="msg_album_created_success">Álbum creado exitosamente</string>
    <string name="msg_error_fields_required">Todos los campos son obligatorios</string>
    <string name="msg_album_required_fields">Nombre del álbum y artista son obligatorios</string>
    <string name="msg_artists_not_found">No existen artistas para este album</string>
    <string name="title_add_artist_to_album">Agregar artista al álbum</string>
    <string name="label_select_artist">Artista</string>
    <string name="placeholder_select_artist">Selecciona un artista</string>
    <string name="title_add_album_to_artist">Agregar álbum al artista</string>
    <string name="label_select_album">Álbum</string>
    <string name="placeholder_select_album">Selecciona un álbum</string>
    <string name="btn_save">Guardar</string>
    <string name="btn_back">Atras</string>
    <string name="label_band_suffix">%1$s (Banda)</string>
    <string name="label_musician_suffix">%1$s (Músico)</string>
    <string name="msg_select_artist_required">Debes seleccionar un artista</string>
    <string name="msg_select_album_required">Debes seleccionar un álbum</string>
    <string name="msg_no_artists_available">No hay artistas disponibles</string>
    <string name="msg_all_artists_assigned">Este álbum ya tiene asignados todos los artistas disponibles</string>
    <string name="msg_all_albums_assigned">Este artista ya tiene asignados todos los álbumes disponibles</string>
    <string name="msg_artist_added_success">Artista agregado exitosamente</string>

    <!-- HU10: Agregar artistas favoritos al coleccionista -->
    <string name="title_add_favorite_artist">Agregar artista favorito</string>
    <string name="msg_all_favorite_artists_assigned">Todos los artistas ya son favoritos de este coleccionista</string>
    <string name="desc_add_favorite_artist">Agregar artista favorito</string>
...
