...

    Row(
        modifier = Modifier
            .fillMaxWidth()
            .clickable(onClick = onClick)
            .heightIn(min = 104.dp)
            .testTag("album-item")
            .padding(horizontal = 20.dp, vertical = 10.dp),
        verticalAlignment = Alignment.CenterVertically
    ) {
        AsyncImage(
            model = album.cover,
            contentDescription = album.name,
...
            Text(album.genre ?: "", color = Color.Gray)
            Text(releaseDate)
            TextButton(
                onClick = onClick,
                modifier = Modifier
                    .padding(top = 4.dp)
                    .testTag("album-detail-button")
            ) {
                Text(text = "Ver detalle")
            }
        }
    }
}
...
